
Sorted out files in stats module.

*****

Added __version__ variable into VERSION.py

*****

Added ophase.py into models module with orbital-phase lightcurve
model.
Fixed a few other bugs to get the pupppies package to import without
breaking.

*****

Got setup.py up to speed, puppies is now installable.

*****

Removed MCcubed submodule.
Added mc3 requirement.

*****

Added .readthedocs.yml file.
Updated docs conf.py and other docs.
Removed CONTRIBUTING.md

*****

Added pyproject.toml file.

*****

Updated mc3 required version to 3.0.6.


*****  Thu Mar 11 11:53:47 CET 2021  *****

Removed eclipse submodule, replaced with source files.
Fixed some bugs related to mc3 dependency.

*****

Updated LICENSE.

*****

PEP8ed puppies/driver.py.

*****

Added ROOT constant into tools module with puppies root location.

*****

PEP8ed pup_spitzer.py

*****

Renamed io/loadsave.py to io/io.py

*****

PEP8ed io.py.

*****

Renamed inst module to instruments.

*****

PEP8ed pup_badpix.py.

*****

PEP8ed stats.py.

*****

Moved update() from pup_center.py to io.py.

*****

PEP8ed pup_center.py.


*****  Sun Mar 14 20:17:18 CET 2021  *****

Updated logo and README files.

*****

Added pup entry point.


*****  Sun Mar 21 16:40:37 CET 2021  *****

Refactored io.update to process whatever is passed on in the config
file, regardless of the step.  Do not set defaults.  Moved checks
into the respective steps.

*****

PEP8ed pup_photom.py and got it working.

*****

Tweaked README file.


*****  Do 25. Mär 11:46:27 CET 2021  *****

PEP8ed image module.
Added image module into main package.

*****

PEP8ed pup_model.py.
Got light-curve fitting and retrieval running.

*****

Updated docs adding getting started and draft of WASP43b eclipse
worked example.

*****

Added pup_marker.py with code to enable pup matplotlib markers.
Updated getting started with pup-marker example.
Moved all figures to puppies/docs/figures/ folder.

*****

PEP8ed a bunch of files.
Updated copyright headers.
